cert-manager/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: default-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx  # This tells Kubernetes to use the NGINX Ingress Controller
  tls:
    - hosts:
        - "my-email"
      secretName: my-tls-certificate-gsqnf
  rules:
    - host: "my-email"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx
                port:
                  number: 80
